[gd_scene load_steps=5 format=2]

[ext_resource path="res://object/button/button_audio.gd" type="Script" id=1]
[ext_resource path="res://asset/sounds/effect/hover_btn.mp3" type="AudioStream" id=2]
[ext_resource path="res://asset/font/arial.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 13
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Button_v2" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
script = ExtResource( 1 )
hover_sound = ExtResource( 2 )

[node name="LabelName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = 6.0
margin_right = 75.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[connection signal="mouse_entered" from="." to="." method="_on_Button_v2_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_v2_mouse_exited"]
